Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -2474,10 +2474,9 @@ msgid "%s days, %s hours, %s minutes and %s seconds"
 msgstr "%s μέρες, %s ώρες, %s λεπτά %s δευτερόλεπτα"
 
 #: libraries/common.lib.php:1856
-#, fuzzy
 #| msgid "Routine parameters"
 msgid "Missing parameter:"
-msgstr "Παράμετροι ρουτίνας"
+msgstr "Απολεσθείσα παράμετρος:"
 
 #: libraries/common.lib.php:2162 libraries/common.lib.php:2165
 #: libraries/display_tbl.lib.php:299
