--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-26 18:26+0200\n"
+"PO-Revision-Date: 2011-07-26 18:28+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -6308,10 +6308,9 @@ msgid ""
 msgstr "Οι ακόλουθες δομές δημιουργήθηκαν ή αλλάχτηκαν. Εδώ μπορείτε να:"
 
 #: libraries/import.lib.php:1069
-#, fuzzy
 #| msgid "View a structure`s contents by clicking on its name"
 msgid "View a structure's contents by clicking on its name"
-msgstr "Δείτε τα περιεχόμενα δομής πατώντας στο όνομα"
+msgstr "Προβολή των περιεχομένων δομής πατώντας στο όνομά της"
 
 #: libraries/import.lib.php:1070
 msgid ""
