Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-26 18:33+0200\n"
+"PO-Revision-Date: 2011-07-26 18:35+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -10054,7 +10054,6 @@ msgstr ""
 "μέχρι και 15%"
 
 #: server_status.php:1373
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/>\n"
 #| "        Ok, you are good to go! Once you click 'Start monitor' your "
@@ -10098,14 +10097,7 @@ msgstr ""
 "        αριστερό πλήκτρο του ποντικιού και μετακινηθείτε μέσα στο διάγραμμα. "
 "Αυτό θα φορτώσει τα απαιτούμενα στατιστικά από τις καταγραφές βοηθόντας να "
 "βρείτε τι προκάλεσε αυτή\n"
-"        την έντονη δραστηριότητα.</p>\n"
-"        <p><b>Σημειώστε:</b>\n"
-"        Ενεργοποιώντας το general_log ίσως αυξήσει τη φόρτωση του διακομιστή "
-"μεταξύ 5-15%. Επίσης, έχετε υπόψη ότι η δημιουργία στατιστικών από τις "
-"καταγραφές είναι μια \n"
-"        πολύ απαιτητική σε πόρους εργασία, έτσι σας προτείνουμε να επιλέξετε "
-"μια μικρή επέκταση χρόνου.\n"
-"        </p>"
+"        την έντονη δραστηριότητα.</p>"
 
 #: server_status.php:1383
 msgid ""
