--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-26 18:40+0200\n"
+"PO-Revision-Date: 2011-07-26 18:41+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -10188,6 +10188,8 @@ msgstr "Λήψη μόνο των δηλώσεων SELECT,INSERT,UPDATE και DE
 #: server_status.php:1470
 msgid "Remove variable data in INSERT statements for better grouping"
 msgstr ""
+"Απομάκρυνση δεδομένων μεταβλητών στις δηλώσεις INSERT για καλύτερη "
+"ομαδοποιήση"
 
 #: server_status.php:1473
 msgid ""
