--- a/po/sk.po
+++ b/po/sk.po
@@ -1159,7 +1159,7 @@ msgstr "KiB"
 
 #: js/messages.php:100
 msgid "Average load"
-msgstr ""
+msgstr "Priemerné vyťaženie"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:102
