--- a/po/sk.po
+++ b/po/sk.po
@@ -1178,10 +1178,9 @@ msgid "Settings"
 msgstr "Nastavenia"
 
 #: js/messages.php:105
-#, fuzzy
 #| msgid "Remove database"
 msgid "Remove chart"
-msgstr "Odstrániť databázu"
+msgstr "Odstrániť graf"
 
 #: js/messages.php:106
 msgid "Edit labels and series"
