Translation update done using Pootle.

--- a/po/sk.po
+++ b/po/sk.po
@@ -1163,10 +1163,9 @@ msgstr "Priemerné vyťaženie"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:102
-#, fuzzy
 #| msgid "Versions"
 msgid "Questions"
-msgstr "Verzia"
+msgstr "Dopyty"
 
 #: js/messages.php:103 server_status.php:894
 msgid "Traffic"
