--- a/po/sk.po
+++ b/po/sk.po
@@ -5728,7 +5728,7 @@ msgstr ""
 
 #: libraries/engines/pbxt.lib.php:22
 msgid "Index cache size"
-msgstr ""
+msgstr "Veľkosť vyrovnávacej pamäte indexu"
 
 #: libraries/engines/pbxt.lib.php:23
 msgid ""
