Translation update done using Pootle.

--- a/po/sk.po
+++ b/po/sk.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-27 14:50+0200\n"
+"PO-Revision-Date: 2011-07-27 14:52+0200\n"
 "Last-Translator: Martin Lacina <martin@whistler.sk>\n"
 "Language-Team: slovak <sk@li.org>\n"
 "Language: sk\n"
@@ -5735,6 +5735,9 @@ msgid ""
 "This is the amount of memory allocated to the index cache. Default value is "
 "32MB. The memory allocated here is used only for caching index pages."
 msgstr ""
+"Množstvo pamäte vyhradenej pre vyrovnávaciu pamät indexu. Štandardná hodnota "
+"je 32MB. Pamät tu priradená je použitá výhradne pre vyrovnávaciu pamäť "
+"indexových stránok."
 
 #: libraries/engines/pbxt.lib.php:27
 msgid "Record cache size"
