--- a/po/sk.po
+++ b/po/sk.po
@@ -5769,6 +5769,8 @@ msgid ""
 "The size of a transaction log before rollover, and a new log is created. The "
 "default value is 16MB."
 msgstr ""
+"Maximálna veľkosť transakčného logu pred jeho pretočením a vytvorením "
+"nového. Štandardná hodnota je 16MB."
 
 #: libraries/engines/pbxt.lib.php:42
 msgid "Transaction buffer size"
