--- a/po/sk.po
+++ b/po/sk.po
@@ -1218,7 +1218,7 @@ msgstr "general_log je povolený."
 
 #: js/messages.php:116
 msgid "slow_query_log is enabled."
-msgstr ""
+msgstr "slow_query_log je povolený."
 
 #: js/messages.php:117
 msgid "slow_query_log and general_log are disabled."
