--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-19 22:29+0200\n"
+"PO-Revision-Date: 2011-07-27 16:38+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -1212,10 +1212,9 @@ msgid "Pause monitor"
 msgstr "Pausar monitorización"
 
 #: js/messages.php:114
-#, fuzzy
 #| msgid "general_log and slow_query_log is enabled."
 msgid "general_log and slow_query_log are enabled."
-msgstr "«general_log» y «slow_query_log» activos."
+msgstr "«general_log» y «slow_query_log» están activos."
 
 #: js/messages.php:115
 msgid "general_log is enabled."
