Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -1377,7 +1377,7 @@ msgstr "Filtrar"
 
 #: js/messages.php:154
 msgid "Filter queries by word/regexp:"
-msgstr ""
+msgstr "Filtrar consultas por palabra/expresión regular:"
 
 #: js/messages.php:155
 msgid "Group queries, ignoring variable data in WHERE statements"
