--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-27 16:39+0200\n"
+"PO-Revision-Date: 2011-07-27 16:40+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -1384,10 +1384,9 @@ msgid "Group queries, ignoring variable data in WHERE statements"
 msgstr "Agrupar consultas, ignorando datos variables en sentencias WHERE"
 
 #: js/messages.php:156
-#, fuzzy
 #| msgid "Number of inserted rows"
 msgid "Sum of grouped rows:"
-msgstr "Número de filas insertadas"
+msgstr "Suma de filas agrupadas:"
 
 #: js/messages.php:157
 #, fuzzy
