--- a/po/es.po
+++ b/po/es.po
@@ -1530,10 +1530,9 @@ msgid "Change"
 msgstr "Cambiar"
 
 #: js/messages.php:208
-#, fuzzy
 #| msgid "Maximum execution time"
 msgid "Query execution time"
-msgstr "Tiempo máximo de ejecución"
+msgstr "Tiempo de ejecución de la consulta"
 
 #: js/messages.php:211
 msgid "Hide search criteria"
