--- a/po/es.po
+++ b/po/es.po
@@ -1548,10 +1548,9 @@ msgid "Ignore"
 msgstr "Ignorar"
 
 #: js/messages.php:218
-#, fuzzy
 #| msgid "Add column"
 msgid "Add columns"
-msgstr "Añadir columna"
+msgstr "Agregar columnas"
 
 #: js/messages.php:221
 msgid "Select referenced key"
