--- a/po/es.po
+++ b/po/es.po
@@ -1918,7 +1918,7 @@ msgstr ""
 
 #: libraries/File.class.php:507
 msgid "Error while moving uploaded file."
-msgstr ""
+msgstr "Error al mover el archivo subido."
 
 #: libraries/File.class.php:515
 msgid "Cannot read (moved) upload file."
