--- a/po/es.po
+++ b/po/es.po
@@ -6350,10 +6350,9 @@ msgstr ""
 "correspondiente"
 
 #: libraries/import.lib.php:1071
-#, fuzzy
 #| msgid "Edit its structure by following the \"Structure\" link"
 msgid "Edit structure by following the \"Structure\" link"
-msgstr "Edite su estructura siguiendo el enlace \"Estructura\""
+msgstr "Edite la estructura siguiendo el enlace \"Estructura\""
 
 #: libraries/import.lib.php:1074
 msgid "Go to database"
