--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-27 16:50+0200\n"
+"PO-Revision-Date: 2011-07-27 16:52+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -10088,7 +10088,6 @@ msgstr ""
 "hasta en un 15%"
 
 #: server_status.php:1373
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/>\n"
 #| "        Ok, you are good to go! Once you click 'Start monitor' your "
@@ -10129,14 +10128,7 @@ msgstr ""
 "<p>Cuando vea un pico repentino de actividad, seleccione el intervalo de "
 "tiempo relevante en el gráfico manteniendo pulsado el botón izquierdo y "
 "arrastrando sobre el gráfico. Esto cargará las estadísticas de los "
-"registros, lo que lo ayudará a encontrar la causa del pico de actividad.</"
-"p>\n"
-"<p><b>Notar que:</b>\n"
-"Activar «general_log» puede aumentar la carga en el servidor hast un 5-15%. "
-"También esté al tanto que generar estadísticas de los registros es una tarea "
-"muy intensiva por lo que se recomienda seleccionar un período de tiempo lo "
-"más pequeño posible.\n"
-"</p>"
+"registros, lo que lo ayudará a encontrar la causa del pico de actividad.</p>"
 
 #: server_status.php:1383
 msgid ""
