Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-27 16:52+0200\n"
+"PO-Revision-Date: 2011-07-27 16:53+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -10140,6 +10140,12 @@ msgid ""
 "not required any more.\n"
 "        "
 msgstr ""
+"<b>Notar que:</b>\n"
+"Activar «general_log» puede aumentar la carga en el servidor hasta un 5-15%. "
+"También esté al tanto que generar estadísticas de los registros es una "
+"tarea muy intensiva por lo que se recomienda seleccionar un período de "
+"tiempo lo más pequeño posible y desactivar «general_log» y vaciar sus tablas "
+"una vez que ya no se necesite monitorizar.\n"
 
 #: server_status.php:1396
 msgid "CPU Usage"
