--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 00:57+0200\n"
+"PO-Revision-Date: 2011-07-29 00:59+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -3416,7 +3416,7 @@ msgid ""
 "storage[/a] in documentation"
 msgstr ""
 "Προσαρμογή βάσης δεδομένων phpMyAdmin για παροχή πρόσβασης σε πρόσθετα "
-"χαρακτηριστικά. Δείτε την [a@../Documentation.html#linked-tables]υποδομή "
+"χαρακτηριστικά. Δείτε την [a@Documentation.html#linked-tables]υποδομή "
 "συνδεδεμένων πινάκων[/a] στην τεκμηρίωση"
 
 #: libraries/config/messages.inc.php:206
