--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 00:59+0200\n"
+"PO-Revision-Date: 2011-07-29 01:00+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -8024,10 +8024,9 @@ msgid ""
 "Login cookie store is lower than cookie validity configured in phpMyAdmin, "
 "because of this, your login will expire sooner than configured in phpMyAdmin."
 msgstr ""
-"Η παράμετρος PHP [a@http://php.net/manual/en/session.configuration.php#ini."
-"session.gc-maxlifetime@]session.gc_maxlifetime[/a] είναι μικρότερη από την "
-"ρυθμισμένη εγκυρότητα cookie στο phpMyAdmin. Εξαιτίας αυτού, η σύνδεσή σας "
-"θα λήξει νωρίτερα από ό,τι ρυθμίστηκε στο phpMyAdmin."
+"Το αποθηκευμένο cookie σύνδεσης είναι μικρότερο από την εγκυρότητα cookie "
+"που ορίστηκε στο phpMyAdmin, για αυτό, η σύνδεσή σας θα λήξει συντομότερα "
+"από τη ρύθμιση του phpMyAdmin."
 
 #: main.php:282
 msgid "The configuration file now needs a secret passphrase (blowfish_secret)."
