Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 01:04+0200\n"
+"PO-Revision-Date: 2011-07-29 01:05+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -10046,11 +10046,11 @@ msgid ""
 msgstr ""
 "Η Εποπτεία phpMyAdmin μπορεί να σας βοηθήσει να βελτιστοποιήσετε τη ρύθμιση "
 "του διακομιστή και να καταγράφει χρονοβόρα\n"
-"ερωτήματα. Για το τελευταίο θα χρειαστείτε να ορίσετε το log_output σε "
-"«TABLE» και να έχετε ενεργοποιήσει το slow_query_log ή το general_log. "
+"        ερωτήματα. Για το τελευταίο θα χρειαστείτε να ορίσετε το log_output "
+"σε «TABLE» και να έχετε ενεργοποιήσει το slow_query_log ή το general_log. "
 "Σημειώστε, ωστόσο, ότι το\n"
-"general_log παράγει πολλά δεδομένα και αυξάνει τη χρήση πόρων του διακομιστή "
-"μέχρι και 15%"
+"        general_log παράγει πολλά δεδομένα και αυξάνει τη χρήση πόρων του "
+"διακομιστή μέχρι και 15%"
 
 #: server_status.php:1373
 #| msgid ""
