Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 01:06+0200\n"
+"PO-Revision-Date: 2011-07-29 01:07+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -10111,10 +10111,11 @@ msgstr ""
 "<b>Σημειώστε:</b>\n"
 "        Η ενεργοποίηση του general_log μπορεί να αυξήσει τη χρήση των πόρων "
 "του συστήματος κατά 5-15%. Επίσης, λάβετε υπόψη ότι η δημιουργία στατιστικών "
-"από τις καταγραφές είναι μια εργασία που απαιτεί έντονη χρήση πόρων, για "
-"αυτό σας προτείνεται να χρησιμοποιήσετε μικρό χρονικό όριο και να "
-"απενεργοποιήσετε το general_log και να αδειάσετε τον πίνακά του μόλις η "
-"εποπτεία δεν είναι πλέον απαραίτητη.        "
+"από τις καταγραφές είναι μια\n"
+"        εργασία που απαιτεί έντονη χρήση πόρων, για αυτό σας προτείνεται να "
+"χρησιμοποιήσετε μικρό χρονικό όριο και να απενεργοποιήσετε το general_log "
+"και να αδειάσετε τον πίνακά του μόλις η εποπτεία δεν είναι πλέον απαραίτητη:\n"
+"        "
 
 #: server_status.php:1396
 msgid "CPU Usage"
