--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 01:10+0200\n"
+"PO-Revision-Date: 2011-07-29 01:11+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -9622,8 +9622,7 @@ msgstr "Ο αριθμός των φυσικών εγγραφών στο αρχε
 
 #: server_status.php:1125
 msgid "The number of fsync() writes done to the log file."
-msgstr ""
-"Ο αριθμός των εγγραφών fsyncs() που ολοκληρώθηκαν στο αρχείο καταγραφής."
+msgstr "Ο αριθμός των εγγραφών fsync() που ολοκληρώθηκαν στο αρχείο καταγραφής."
 
 #: server_status.php:1126
 msgid "The number of pending log file fsyncs."
