--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 01:11+0200\n"
+"PO-Revision-Date: 2011-07-29 01:12+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -6121,8 +6121,7 @@ msgstr ""
 #: libraries/export/sql.php:45
 msgid "Additional custom header comment (\\n splits lines):"
 msgstr ""
-"Προσθήκη προσαρμοσμένου σχολίου στην κεφαλίδα (το \\\n"
-" χωρίζει τις γραμμές):"
+"Προσθήκη προσαρμοσμένου σχολίου στην κεφαλίδα (το \\ n χωρίζει τις γραμμές):"
 
 #: libraries/export/sql.php:50
 msgid ""
