--- a/po/el.po
+++ b/po/el.po
@@ -7311,7 +7311,7 @@ msgstr "Σχήμα της βάσης δεδομένων %s - Σελίδα %s"
 
 #: libraries/schema/Export_Relation_Schema.class.php:170
 msgid "This page does not contain any tables!"
-msgstr "Η σελίδα %s δεν περιέχει κανένα πίνακα!"
+msgstr "Αυτή η σελίδα δεν περιέχει κανένα πίνακα!"
 
 #: libraries/schema/Export_Relation_Schema.class.php:195
 msgid "SCHEMA ERROR: "
