--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:00+0200\n"
+"PO-Revision-Date: 2011-07-29 12:02+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -5325,10 +5325,8 @@ msgid ""
 msgstr ""
 "Να επιτρέπεται η διακοπή της εισαγωγής σε περίπτωση που ανιχνευτεί ότι η "
 "εφαρμογή του κώδικα προσεγγίζει το χρονικό όριο. <i>(Αυτό μπορεί να είναι "
-"καλό για εισαγωγή μεγάλων αρχείων, ωστόσο, μπορεί να κόψει τις μεταφορές."
-"Allow the interruption of an import in case the script detects it is close "
-"to the PHP timeout limit. <i>(This might be good way to import large files, "
-"however it can break transactions.)</i>"
+"καλό για εισαγωγή μεγάλων αρχείων, ωστόσο, μπορεί να κόψει τις "
+"μεταφορές.</i>"
 
 #: libraries/display_import.lib.php:228
 msgid "Number of rows to skip, starting from the first row:"
