--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:02+0200\n"
+"PO-Revision-Date: 2011-07-29 12:03+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -6407,7 +6407,7 @@ msgstr "Εισαγωγή ποσοστών ως κανονικά δεκαδικά
 
 #: libraries/import/ods.php:29
 msgid "Import currencies <i>(ex. $5.00 to 5.00)</i>"
-msgstr "Εισαγωγή νομισμάτων (π.χ. €5,00 αντί 5,00)"
+msgstr "Εισαγωγή νομισμάτων <i>(π.χ. €5,00 αντί 5,00)</i>"
 
 #: libraries/import/sql.php:33
 msgid "SQL compatibility mode:"
