--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:03+0200\n"
+"PO-Revision-Date: 2011-07-29 12:04+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -246,7 +246,7 @@ msgstr "Εκτύπωση"
 
 #: db_export.php:26
 msgid "View dump (schema) of database"
-msgstr "Εμφάνιση σχήματος της βάσης δεδομένων"
+msgstr "Εμφάνιση σκαριφήματος (σχήματος) της βάσης δεδομένων"
 
 #: db_export.php:30 db_printview.php:94 db_qbe.php:101 db_tracking.php:48
 #: export.php:374 navigation.php:296
