--- a/po/el.po
+++ b/po/el.po
@@ -971,7 +971,7 @@ msgstr "Θέλετε να εκτελέσετε την εντολή "
 
 #: js/messages.php:33 libraries/mult_submits.inc.php:282 sql.php:304
 msgid "You are about to DESTROY a complete database!"
-msgstr "Πρόκειται να ΚΑΤΑΣΤΡΕΨΕΤΕ (DESTROY) μια ολόκληρη βάση δεδομένων!"
+msgstr "Πρόκειται να DESTROY μια ολόκληρη βάση δεδομένων!"
 
 #: js/messages.php:34
 msgid "You are about to DESTROY a complete table!"
