Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:06+0200\n"
+"PO-Revision-Date: 2011-07-29 12:07+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -2623,7 +2623,7 @@ msgstr ""
 
 #: libraries/config.values.php:120
 msgid "complete inserts"
-msgstr "πλήρεις εντολές εισαγωγής (Insert)"
+msgstr "πλήρεις εντολές Insert"
 
 #: libraries/config.values.php:121
 msgid "extended inserts"
