--- a/po/el.po
+++ b/po/el.po
@@ -2766,7 +2766,7 @@ msgstr ""
 
 #: libraries/config/messages.inc.php:22
 msgid "Allow third party framing"
-msgstr "Επιτρέπονται πλαίσια (frames) τρίτων"
+msgstr "Επιτρέπονται frames τρίτων"
 
 #: libraries/config/messages.inc.php:23
 msgid "Show &quot;Drop database&quot; link to normal users"
