--- a/po/el.po
+++ b/po/el.po
@@ -2874,7 +2874,7 @@ msgstr ""
 
 #: libraries/config/messages.inc.php:43
 msgid "Confirm DROP queries"
-msgstr "Επιβεβαίωση ερωτημάτων ΔΙΑΓΡΑΦΗΣ (DROP)"
+msgstr "Επιβεβαίωση ερωτημάτων DROP"
 
 #: libraries/config/messages.inc.php:44
 msgid "Debug SQL"
