--- a/po/el.po
+++ b/po/el.po
@@ -3138,7 +3138,7 @@ msgstr "Κατάσταση συμβατότητας SQL"
 
 #: libraries/config/messages.inc.php:122 libraries/export/sql.php:183
 msgid "<code>CREATE TABLE</code> options:"
-msgstr "Επιλογές <code>ΔΗΜΙΟΥΡΓΙΑΣ ΠΙΝΑΚΑ</code> (CREATE TABLE):"
+msgstr "Επιλογές <code>CREATE TABLE</code>:"
 
 #: libraries/config/messages.inc.php:123
 msgid "Creation/Update/Check dates"
