--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:10+0200\n"
+"PO-Revision-Date: 2011-07-29 12:11+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -3193,9 +3193,9 @@ msgid ""
 "Sort order for items in a foreign-key dropdown box; [kbd]content[/kbd] is "
 "the referenced data, [kbd]id[/kbd] is the key value"
 msgstr ""
-"Ταξινόμηση για αντικείμενα σε αναδυόμενο μενού μη διακριτού κλειδιού "
-"(foreing key); [kbd]content[/kbd] είναι τα αναφερθέντα δεδομένα, [kbd]id[/"
-"kbd] είναι η τιμή κλειδιού"
+"Ταξινόμηση για αντικείμενα σε αναδυόμενο μενού foreing key; "
+"[kbd]content[/kbd] είναι τα αναφερθέντα δεδομένα, [kbd]id[/kbd] είναι η τιμή "
+"κλειδιού"
 
 #: libraries/config/messages.inc.php:151
 msgid "Foreign key dropdown order"
