--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:11+0200\n"
+"PO-Revision-Date: 2011-07-29 12:12+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -3695,8 +3695,7 @@ msgstr "Διαχωριστικό δέντρου πινάκων"
 
 #: libraries/config/messages.inc.php:282
 msgid "URL where logo in the navigation frame will point to"
-msgstr ""
-"Ο Σϋνδεσμος (URL) όπου θα τοποιθετηθεί στο λογότυπο στο πλαίσιο πλοήγησης"
+msgstr "Ο Σϋνδεσμος URL όπου θα τοποιθετηθεί στο λογότυπο στο πλαίσιο πλοήγησης"
 
 #: libraries/config/messages.inc.php:283
 msgid "Logo link URL"
