Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -3756,11 +3756,10 @@ msgid ""
 "only occurs for the current server. Setting this to FALSE makes it easy to "
 "forget to log out from other servers when connected to multiple servers."
 msgstr ""
-"Αν οριστεί ως ΑΛΗΘΕΙΑ (TRUE), με την αποσύνδεση διαγράφονται τα cookies για "
-"όλους τους διακομιστές; όταν οριστεί ως ΨΕΥΔΟΣ (FALSE), η αποσύνδεση "
-"επηρεάζει μόνο τον τρέχοντα διακομιστή. Ορίζοντάς το σε ΨΕΥΔΟΣ είναι εύκολο "
-"να ξεχάσετε να αποσυνδεθείτε από άλλους διακομιστές όταν συνδέεστε σε "
-"πολλούς."
+"Αν οριστεί ως TRUE, με την αποσύνδεση διαγράφονται τα cookies για όλους τους "
+"διακομιστές; όταν οριστεί ως FALSE, η αποσύνδεση επηρεάζει μόνο τον "
+"τρέχοντα διακομιστή. Ορίζοντάς το σε FALSE είναι εύκολο να ξεχάσετε να "
+"αποσυνδεθείτε από άλλους διακομιστές όταν συνδέεστε σε πολλούς."
 
 #: libraries/config/messages.inc.php:295
 msgid "Delete all cookies on logout"
