Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:13+0200\n"
+"PO-Revision-Date: 2011-07-29 12:14+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -4262,11 +4262,11 @@ msgid ""
 "alphabetical order."
 msgstr ""
 "Μπορείτε να χρησιμοποιήσετε χαρακτήρες μπαλαντέρ MySQL (% και _), με ανάποδη "
-"κάθετο χρησιμοποιήστε τα ως κανονικούς χαρακτήρες, π.χ. χρησιμοποιήστε «my"
-"\\_db» και όχι «my_db». Με χρήση αυτής της επιλογής μπορείτε να ταξινομήσετε "
-"τις βάσεις δεδομένων, απλά εισάγωγοντας τα ονόματά τους σε σειρά και "
-"χρησιμοποιώντας το [kbd]*[/kbd] στο τέλος για να δείξετε τις υπόλοιπες σε "
-"αλφαβητική σειρά."
+"κάθετο χρησιμοποιήστε τα ως κανονικούς χαρακτήρες, π.χ. χρησιμοποιήστε "
+"[kbd]'my\\_db[/kbd]' και όχι [kbd]'my_db[/kbd]'. Με χρήση αυτής της επιλογής "
+"μπορείτε να ταξινομήσετε τις βάσεις δεδομένων, απλά εισάγοντας τα ονόματά "
+"τους σε σειρά και χρησιμοποιώντας το [kbd]*[/kbd] στο τέλος για να δείξετε "
+"τις υπόλοιπες σε αλφαβητική σειρά."
 
 #: libraries/config/messages.inc.php:400
 msgid "Show only listed databases"
