--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:14+0200\n"
+"PO-Revision-Date: 2011-07-29 12:15+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -4426,7 +4426,7 @@ msgstr ""
 
 #: libraries/config/messages.inc.php:429
 msgid "Add DROP DATABASE"
-msgstr "Προσθήκη ΔΙΑΓΡΑΦΗΣ ΒΑΣΗΣ ΔΕΔΟΜΕΝΩΝ (DROP DATABASE)"
+msgstr "Προσθήκη της εντολής DROP DATABASE"
 
 #: libraries/config/messages.inc.php:430
 msgid ""
