--- a/po/el.po
+++ b/po/el.po
@@ -6164,7 +6164,7 @@ msgstr "δηλώσεις <code>INSERT DELAYED</code>"
 
 #: libraries/export/sql.php:235
 msgid "<code>INSERT IGNORE</code> statements"
-msgstr "δηλώσεις <code>ΕΙΣΑΓΩΓΗΣ ΑΓΝΟΗΣΗΣ</code> (INSERT IGNORE)"
+msgstr "δηλώσεις <code>INSERT IGNORE</code>"
 
 #: libraries/export/sql.php:245
 msgid "Function to use when dumping data:"
