Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:19+0200\n"
+"PO-Revision-Date: 2011-07-29 12:21+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -6180,8 +6180,8 @@ msgid ""
 "&nbsp; &nbsp; Example: <code>INSERT INTO tbl_name (col_A,col_B,col_C) VALUES "
 "(1,2,3)</code>"
 msgstr ""
-"συμπεριλαμβάνει ονόματα στηλών σε κάθε δήλωση <code>ΕΙΣΑΓΩΓΗΣ</code> "
-"(INSERT) <br /> &nbsp; &nbsp; &nbsp; Παράδειγμα: <code>INSERT INTO tbl_name "
+"συμπεριλαμβάνει ονόματα στηλών σε κάθε δήλωση <code>INSERT</code> <br /> "
+"&nbsp; &nbsp; &nbsp; Παράδειγμα: <code>INSERT INTO tbl_name "
 "(col_A,col_B,col_C) VALUES (1,2,3)</code>"
 
 #: libraries/export/sql.php:265
