Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:21+0200\n"
+"PO-Revision-Date: 2011-07-29 12:22+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -6223,9 +6223,9 @@ msgid ""
 "Dump TIMESTAMP columns in UTC <i>(enables TIMESTAMP columns to be dumped and "
 "reloaded between servers in different time zones)</i>"
 msgstr ""
-"Αχρήστευση στηλών ΧΡΟΝΟΣΦΡΑΓΙΔΑΣ (TIMESTAMP) σε UTC <i>(ενεργοποιεί τις "
-"στήλες TIMESTAMP να αχρηστευτούν και να επαναφορτωθούν μεταξύ διακομιστών σε "
-"διαφορετικές ζώνες ώρας)</i>"
+"Μετατροπή στηλών TIMESTAMP σε UTC <i>(ενεργοποιεί τις στήλες TIMESTAMP να "
+"μετατραπούν και να επαναφορτωθούν μεταξύ διακομιστών σε διαφορετικές ζώνες "
+"ώρας)</i>"
 
 #: libraries/export/sql.php:329 libraries/export/xml.php:34
 msgid "Procedures"
