--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 12:22+0200\n"
+"PO-Revision-Date: 2011-07-29 12:23+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -7422,7 +7422,7 @@ msgstr ""
 
 #: libraries/schema/User_Schema.class.php:464
 msgid "Toggle scratchboard"
-msgstr "(Απ)ενεργοποίηση πίνακα σχεδιασμού"
+msgstr "Εναλλαγή πίνακα σχεδιασμού"
 
 #. l10n: Text direction, use either ltr or rtl
 #: libraries/select_lang.lib.php:469
